tests/templatefora/SubtypingTest.java
// Test subtyping relationships for the TemplateForA Checker.
class SubtypeTest {

    /* Uncomment when you are ready to begin testing. */
    /*
    void allSubtypingRelationships(@UnknownTemplatefora int t, @TemplateforaBottom int b) {
        @UnknownTemplatefora int a = us;
        @UnknownTemplatefora int b = nn;
        // :: error: assignment.type.incompatible
        @TemplateforaBottom int c = us; // expected error on this line
        @TemplateforaBottom int d = nn;
    }
    */
}
